# cryptogpt

./: README.md
mypython/: .gitignore  Makefile  README.md  config.py  data.py  dataset.py  generate.py  model.py  softmax_crossentropy.html  train.py  utils.py
myrust/: .gitignore  Cargo.toml  Makefile  README.md
myrust/src/: backend.rs  config.rs  dataset.rs  lib.rs  model.rs
